# Pexeso

./: CMakeLists.txt  README.md  main.cpp
src/: board.cpp  board.h  game.cpp  game.h  window.cpp  window.h
test/: catch.hpp  test.cpp
